--- a/LFP PRACTICA/reportes/reporte_mayor_ataque.html
+++ b/LFP PRACTICA/reportes/reporte_mayor_ataque.html
@@ -2,32 +2,32 @@
 <head><title>Reporte de Mayor Ataque</title></head>
 <body>
 <h1>Top 5 Jugadores con Mayor Ataque</h1>
-<table border='1'>
+<table border='2'>
 <tr><th>Posición</th><th>Nombre</th><th>Ataque</th></tr>
 <tr>
 <td>1</td>
-<td>Soldado</td>
-<td>100</td>
+<td>VenomGhost</td>
+<td>63</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Guerrero</td>
-<td>50</td>
+<td>SolarRevenant</td>
+<td>62</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Caballero</td>
-<td>45</td>
+<td>BlazingHydra</td>
+<td>62</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Mago</td>
-<td>40</td>
+<td>StormColossus</td>
+<td>61</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Arquero</td>
-<td>35</td>
+<td>DarkStorm</td>
+<td>61</td>
 </tr>
 </table>
 </body>
