--- a/LFP PRACTICA/reportes/reporte_menor_ataque.html
+++ b/LFP PRACTICA/reportes/reporte_menor_ataque.html
@@ -2,32 +2,32 @@
 <head><title>Reporte de Mayor Defensa</title></head>
 <body>
 <h1>Top 5 Jugadores con Mayor Defensa</h1>
-<table border='1'>
+<table border='2'>
 <tr><th>Posición</th><th>Nombre</th><th>Defensa</th></tr>
 <tr>
 <td>1</td>
-<td>Soldado</td>
-<td>100</td>
+<td>VoidHunter</td>
+<td>39</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Rey</td>
-<td>32</td>
+<td>SpectralReaper</td>
+<td>37</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Guerrero</td>
-<td>30</td>
+<td>StormColossus</td>
+<td>35</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Caballero</td>
-<td>30</td>
+<td>SolarRevenant</td>
+<td>35</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Arquero</td>
-<td>25</td>
+<td>ArcaneBeast</td>
+<td>34</td>
 </tr>
 </table>
 </body>
