--- a/Proyecto2/reportes/Errores.html
+++ b/Proyecto2/reportes/Errores.html
@@ -2,7 +2,18 @@
 <h1>Errores Léxicos</h1>
 <table border='1'>
 <tr><th>Error</th><th>Línea</th><th>Columna</th></tr>
+<tr><td>%</td><td>1</td><td>1</td></tr>
+<tr><td>&quot;sendero</td><td>32</td><td>49</td></tr>
+<tr><td>;</td><td>39</td><td>46</td></tr>
+<tr><td>$</td><td>48</td><td>1</td></tr>
+<tr><td>[</td><td>49</td><td>1</td></tr>
+<tr><td>]</td><td>49</td><td>2</td></tr>
 </table><br><h1>Errores Sintácticos</h1>
 <table border='1'>
 <tr><th>Error</th><th>Línea</th><th>Columna</th></tr>
+<tr><td>Se esperaba número X de coordenada del lugar</td><td>7</td><td>46</td></tr>
+<tr><td>Se esperaba &#39;to&#39; después del origen</td><td>15</td><td>42</td></tr>
+<tr><td>Se esperaba &#39;at&#39; después del tipo del objeto</td><td>18</td><td>62</td></tr>
+<tr><td>Se esperaba CADENA para el tipo de conexión</td><td>33</td><td>9</td></tr>
+<tr><td>Se esperaba &#39;:&#39; después del nombre del objeto</td><td>39</td><td>52</td></tr>
 </table></body></html>
